--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>Resume</title>
+    <title>Zqq</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
